data/derived/comb/progs/unify/prog6850.ml.out
Characters 120-121:
  List.fold_left f base args;;
                 ^
Error: This expression has type int -> int -> int list list
       but an expression was expected of type int -> int -> int
       Type int list list is not compatible with type int 
